# mokkari

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: pypi.yml  testing.yaml  testing.yml
docs/mokkari/schemas/: arc.md  base.md  character.md
mokkari/: __init__.py  session.py
mokkari/schemas/: arc.py  character.py  creator.py  issue.py  publisher.py  series.py  team.py  universe.py  variant.py
tests/: test_arcs.py  test_cache.py  test_characters.py  test_creator.py  test_init.py  test_issues.py  test_publishers.py  test_series.py  test_teams.py  test_universes.py
